# video2md

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  docker-entrypoint.sh  install_gpu.ps1  install_gpu.sh  main.py  pyproject.toml  test_deps.py
ci/: Jenkinsfile
docs/: DOCKER.md  ENVIRONMENT_CONFIG.md  GPU_SUPPORT.md  LOCAL_WHISPER_GUIDE.md
examples/: ai_agent_integration.py  basic_usage.py  batch_processing.py
prompts/: researcher_input.md  researcher_instructions.md  summarizer_input.md  summarizer_instructions.md  whisper_host_instructions.md  whisper_host_message.md
prompts/researcher_instructions/: general.md  github_project.md  review_analysis.md  tutorial.md
src/video2md/: __init__.py  prompt_loader.py
src/video2md/agents/: __init__.py  research_host.py  summarize_host.py  whisper_host.py
src/video2md/clients/: openai_transcribe_client.py  whisper_client.py
src/video2md/downloaders/: __init__.py  base.py  bilibili.py  douyin.py  local.py  registry.py  tiktok.py  youtube.py
src/video2md/downloaders/douyin_api/: abogus.py  client.py
src/video2md/models/: __init__.py  transcription_models.py
src/video2md/server/: __init__.py  mcp_params.py  openai_transcribe_server.py  whisper_server.py
src/video2md/services/: __init__.py  media_utils.py
src/video2md/tools/: __init__.py  chinese_converter_tool.py  video_converter_tool.py  whisper_tool.py
src/video2md/utils/: __init__.py  chinese_converter.py  dependency_checker.py  transcript_converter.py  url_parser.py  video_converter.py
ui/: README.md  app.py
ui/components/: __init__.py  controls.py  file_operations.py  input_section.py  preview_section.py  processing_section.py  shared.py
